# sshache

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
.design-handoff/local-first-terminal-application/: README.md
.design-handoff/local-first-terminal-application/project/: .thumbnail  SSH Ache.dc.html
.github/workflows/: homebrew.yml  pages.yml  release.yml
docs/: BRAND.md  DEPLOY.md  MCP.md  RELEASING.md  TASKS.md
site/: CNAME  _headers  _redirects  docs.html  index.html  robots.txt  sitemap.xml  style.css
src/: App.tsx  main.ts  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/teams/: TeamsPanel.tsx  client.ts
src/teams/crypto/: VENDORED.md  aead.ts  connection.ts  envelope.ts  identity.ts  index.ts  kdf.ts  shamir.ts  sodium.ts  teamkey.ts
