[package]
name = "sshache"
version = "0.1.0"
description = "Local-only SSH client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.61"

[profile.release]
opt-level = "s"
lto = true
strip = true
