[package]
name = "sshache"
version = "0.1.0"
description = "Local-only SSH client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
russh = "0.61"
russh-sftp = "2"
portable-pty = "0.8"
keyring = { version = "3", features = ["apple-native"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
